<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".appsingup">

    <TextView
        android:id="@+id/txtusereg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtfn"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputnameuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/inputfn" />

    <TextView
        android:id="@+id/txtlastuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtln"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputlnreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/inputln" />

    <TextView
        android:id="@+id/txtuserreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtuser"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputuserreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/inputun" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtpass"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpassreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputpass"
            android:text="@string/inputpass" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtcp"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputcnfpasreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputpassredconf"
            android:text="@string/inputpassredconf" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_red_light"
        android:onClick="ini"
        android:text="@string/btnini"
        android:textColor="@color/white" />
</LinearLayout>